--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div class="header">
   <div class="headertitle">
-<div class="title">Feel++ API </div>  </div>
+<div class="title">Feel++ Online Documentation </div>  </div>
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><p><a href="http://www.feelpp.org">Feel++</a> is a unified C++ implementation of Galerkin methods (finite and spectral element methods) in 1D, 2D And 3D to solve partial differential equations.</p>
