update Feel++ online documentation of branch develop

--- a/develop/ChangeLog.html
+++ b/develop/ChangeLog.html
@@ -132,6 +132,7 @@ Changes</h2>
 <ul>
 <li>performance improvements in parallel computing: reduce collective operations, rewrite of some internals</li>
 <li>improved Ginac(symbolic calculus) support</li>
+<li>updated documentation to reflect Homebrew(MacOSX) support and the more stringent requirement that g++ must be at least 4.6 and clang 3.2</li>
 </ul>
 <h2><a class="anchor" id="features0960"></a>
 Features</h2>
